# AezakmiGroup-QA-Task-Tracker

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.nginx  docker-compose.yml  pyproject.toml
bot/: __init__.py  app.py  config.py  live_updates.py  web.py
bot/db/: __init__.py  models.py  session.py
bot/handlers/: __init__.py  commands.py  messages.py
bot/services/: report_service.py  task_service.py
bot/services/parser/: __init__.py  classifier.py  extractors.py  normalizers.py  resolver.py  schemas.py
bot/utils/: formatters.py
deploy/nginx/: default.conf
docs/: message-rules.md
miniapp/: index.html  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts  tsconfig.app.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.ts
miniapp/src/: App.tsx  styles.css  types.ts
miniapp/src/components/: task-card.tsx  task-detail.tsx
miniapp/src/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  skeleton.tsx  tooltip.tsx
miniapp/src/lib/: task-status.ts  telegram.ts
scripts/: migrate_sqlite_to_postgres.py
telegram_task_parser_bot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_task_directives.py
