[project]
name = "telegram-task-parser-bot"
version = "0.1.0"
description = "Telegram bot for extracting and tracking tasks from unstructured chat messages."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.4.1,<4.0.0",
    "SQLAlchemy>=2.0.29,<3.0.0",
    "python-dotenv>=1.0.1,<2.0.0",
    "aiohttp-socks>=0.11.0,<1.0.0",
    "psycopg[binary]>=3.2.0,<4.0.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["bot*"]

[tool.setuptools.package-data]
bot = ["py.typed"]
